[tool.poetry]
name = "pytest-reraise"
version = "1.0.1"
description = "Make multi-threaded pytest test cases fail when they should"
authors = ["bjoluc <mail@bjoluc.de>"]
license = "MIT"
readme = 'readme.md'
homepage = "https://github.com/bjoluc/pytest-reraise"
repository = "https://github.com/bjoluc/pytest-reraise"
documentation = "https://github.com/bjoluc/pytest-reraise#readme"
classifiers = ["Framework :: Pytest"]
keywords = [
    'pytest',
    'plugin',
    'threads',
    'exception',
    'assert',
    'catch',
    'raise',
    're-raise'
]

[tool.poetry.plugins.pytest11]
reraise = "pytest_reraise.reraise"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flake8 = "^3.8.1"
black = { version = "^19.10b0", python = "^3.6" }
pytest-watch = "^4.2.0"
coverage = { extras = ["toml"], version = "^5.1" }
commitizen = { version = "^1.22.0", python = "^3.6" } # commitizen does not support Python < 3.6

[tool.coverage.run]
branch = true
include = ["pytest_reraise/*", "tests/*"]

[tool.commitizen]
version = "1.0.1"
version_files = ["pytest_reraise/__init__.py", "pyproject.toml:version"]
bump_message = "chore(Release): Release $new_version [skip ci]"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
