[tool.poetry]
name = "pytest-reraise"
version = "2.1.2"
description = "Make multi-threaded pytest test cases fail when they should"
authors = ["bjoluc <mail@bjoluc.de>"]
license = "MIT"
readme = 'readme.md'
homepage = "https://github.com/bjoluc/pytest-reraise"
repository = "https://github.com/bjoluc/pytest-reraise"
documentation = "https://github.com/bjoluc/pytest-reraise#readme"
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]
keywords = [
    'pytest',
    'plugin',
    'threads',
    'exception',
    'assert',
    'catch',
    'raise',
    're-raise'
]

[tool.poetry.plugins.pytest11]
reraise = "pytest_reraise.reraise"

[tool.poetry.dependencies]
python = "^3.6.1"
pytest = ">=4.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = { version = "^22.8.0", python = "^3.6.2" } 
pytest-watch = "^4.2.0"
coverage = { extras = ["toml"], version = "^5.5"}
tox = "^3.26.0"
tox-poetry-installer = {extras = ["poetry"], version = "0.8.5"}
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
include = ["pytest_reraise/*", "tests/*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
